Re-worked for better packaging and re-structured for easier comprehensibility. - packaging: -- added qualifiers to all functions -- grouped functions to common files where needed -- added information about the author and packages to DESCRIPTION -- successfully ran devtools checks and build - targets: -- splitted the targets file to several subfiles for easier readability -- got rid of most packages from targets file as they are now added to code directly via qualifiers

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,7 @@ mods/**/*.rds
 **/*.fff
 **/*.log
 **/*.tex
-
-# ignore folders starting with an underscore
-_*/
+data-raw/
 
 # History files
 .Rprofile
