Prepared data for additional analyses during manuscript review (Issue #7) - added a "tracker" in `data_paths()` and `extract_helpers()` - in `import_data()`, incorporated changes in hippocampi field data - in `targets_data.R` added the "tracker" object

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # files not supposed to be shared
-mods/**/*.rds
+/*.rds
 **/.DS_Store
 **/*.docx
+**/*.xlsx
 **/*.pages
 **/*.tiff
 **/*.aux
@@ -10,8 +11,6 @@ mods/**/*.rds
 **/*.fff
 **/*.log
 **/*.tex
-data-raw/
-helpers/
 
 # History files
 .Rprofile
